--- a/task-manager/index.html
+++ b/task-manager/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/src/assets/favicon.ico" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;700&display=swap" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>11640 TASK MANAGER</title>
   </head>
